// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UrlForm Component > should match snapshot in create mode 1`] = `
"<div data-v-6bb9e226="" class="url-form">
  <!-- Edit mode: Show current short URL -->
  <!--v-if-->
  <form data-v-6bb9e226="">
    <!-- URL field (first and most important) -->
    <div data-v-6bb9e226="" class="form-field"><label data-v-6bb9e226="" for="originalUrl">URL zum Verkürzen</label><input data-v-6bb9e226="" id="originalUrl" type="url" required="" placeholder="https://example.com" class="">
      <!--v-if-->
    </div><!-- Optional fields in responsive layout -->
    <div data-v-6bb9e226="" class="optional-fields">
      <!-- Short code field (smaller) -->
      <div data-v-6bb9e226="" class="form-field shortcode-field"><label data-v-6bb9e226="" for="shortCode">Kurz-Code (optional)</label><input data-v-6bb9e226="" id="shortCode" type="text" placeholder="Auto-generiert" pattern="[a-zA-Z0-9_\\-]{6,}" title="Mindestens 6 Zeichen: Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="">
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
    <div data-v-6bb9e226="" class="form-field title-field"><label data-v-6bb9e226="" for="title">Titel (optional)</label><input data-v-6bb9e226="" id="title" type="text" placeholder="Beschreibender Titel für den Link"></div><!-- Buttons -->
    <div data-v-6bb9e226="" class="form-actions">
      <base-button-stub data-v-6bb9e226="" variant="primary" type="submit" disabled="true"></base-button-stub>
      <!--v-if-->
    </div>
  </form>
</div>"
`;

exports[`UrlForm Component > should match snapshot in edit mode 1`] = `
"<div data-v-6bb9e226="" class="url-form">
  <!-- Edit mode: Show current short URL -->
  <div data-v-6bb9e226="" class="readonly-field"><label data-v-6bb9e226="">Kurz-URL</label>
    <div data-v-6bb9e226="" class="input-with-button"><input data-v-6bb9e226="" readonly="" class="readonly-input" value="http://localhost:3000/abc123">
      <base-button-stub data-v-6bb9e226="" variant="secondary" size="sm"></base-button-stub>
    </div>
  </div>
  <form data-v-6bb9e226="">
    <!-- URL field (first and most important) -->
    <div data-v-6bb9e226="" class="form-field"><label data-v-6bb9e226="" for="originalUrl">Ziel-URL</label><input data-v-6bb9e226="" id="originalUrl" type="url" required="" placeholder="https://example.com" class="">
      <!--v-if-->
    </div><!-- Optional fields in responsive layout -->
    <div data-v-6bb9e226="" class="optional-fields">
      <!-- Short code field (smaller) -->
      <div data-v-6bb9e226="" class="form-field shortcode-field"><label data-v-6bb9e226="" for="shortCode">Kurz-Code</label><input data-v-6bb9e226="" id="shortCode" type="text" placeholder="z.B. mein-link" required="" pattern="[a-zA-Z0-9_\\-]{6,}" title="Mindestens 6 Zeichen: Buchstaben, Zahlen, Bindestriche und Unterstriche erlaubt" class="">
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
    <div data-v-6bb9e226="" class="form-field title-field"><label data-v-6bb9e226="" for="title">Titel (optional)</label><input data-v-6bb9e226="" id="title" type="text" placeholder="Beschreibender Titel für den Link"></div><!-- Buttons -->
    <div data-v-6bb9e226="" class="form-actions">
      <base-button-stub data-v-6bb9e226="" variant="primary" type="submit" disabled="false"></base-button-stub>
      <base-button-stub data-v-6bb9e226="" variant="secondary" type="button"></base-button-stub>
    </div>
  </form>
</div>"
`;
